--- a/requirements.txt
+++ b/requirements.txt
@@ -24,11 +24,14 @@ decorator==5.0.9
 defusedxml==0.7.1
 discord.py==1.5.1
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.9
+django-heroku==0.0.0
 entrypoints==0.3
 filelock==3.0.12
 gitdb==4.0.7
 GitPython==3.1.18
+gunicorn==20.1.0
 idna==2.10
 ipykernel==6.0.3
 ipython==7.26.0
@@ -96,5 +99,6 @@ validators==0.18.2
 virtualenv==20.4.7
 wcwidth==0.2.5
 webencodings==0.5.1
+whitenoise==5.3.0
 widgetsnbextension==3.5.1
 yarl==1.5.1
